...
    <string name="input">Input</string>
    <string name="manual_contrast_value_template">Manual value: %1$s</string>
    <string name="enter_directory_path">Enter directory path</string>
    <string name="invalid_directory">Invalid directory path</string>
    <string name="empty_directory_input">Directory path cannot be empty</string>

    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="draw">Warning</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_select_group">Delete Select Group</string>
    <string name="delete_all">Delete all</string>
...
    <string name="cover_ratio_circle">Circle</string>
    <string name="cover_ratio_book">Book ratio</string>
    <string name="cover_ratio_unrestricted">Unrestricted</string>
    <string name="seconds_m">%d s</string>
    <string name="more">More</string>
    <string name="book_add_failed">Failed to add book</string>
    <string name="text_return">Back</string>
    <string name="refresh">Refresh</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="refreshing">Refreshing</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="select_color">Select Color</string>
...
    <string name="image_retain_number">Number of Manga Reservations</string>
    <string name="export_pics_file">Export Picture Files</string>
    <!-- string end -->
    <string name="error_decode_bitmap">Fail to decode bitmap</string>
    <string name="error_image_url_empty">Image URL is empty, check replacement rules</string>
    <string name="variable_comment">Variable Description (variableComment)</string>
    <string name="remote_book">Remote book</string>
    <string name="reading_time_sort">Sort by reading duration</string>
    <string name="last_read_time_sort">Sort by read time</string>
    <string name="reading_time_tag">Reading time:</string>
    <string name="last_read_time_tag">Last read time:</string>
    <string name="page_touch_slop_title">Sliding Page Threshold</string>
    <string name="page_touch_slop_dialog_title">Sliding page turn threshold (0 = system default)</string>
...
